--- a/style.css
+++ b/style.css
@@ -24,3 +24,14 @@ img {
   width: 50px;
   height: 50px;
 }
+button{
+  width: 200px;
+  background-color: black;
+  color: white;
+  height: 80px;
+  font-size: 20px;
+}
+.images{
+ width :25px;
+ height: 23px;
+}
