--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .topnav {
-  margin-left: 35%;
   padding: 14px 16px;
+  position: relative;
 }
 
 .topnav a {
@@ -20,18 +20,42 @@
   background-color: gray;
   color: white;
 }
-img {
-  width: 50px;
-  height: 50px;
-}
-button{
+button {
   width: 200px;
   background-color: black;
   color: white;
   height: 80px;
   font-size: 20px;
 }
-.images{
- width :25px;
- height: 23px;
+.images {
+  width: 25px;
+  height: 23px;
+}
+.main {
+  margin-left: 35%;
+}
+.fashion-web {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+.image {
+  width: 50px;
+  height: 50px;
+}
+.background-image {
+  width: 60%;
+  height: 70%;
+  object-fit: cover;
+
+  position: absolute;
+}
+.footer {
+  position: relative;
+}
+.image-word {
+  font-size: 30px;
+  font-family: "Raleway", sans-serif;
+  position: relative;
+  color: white;
 }
